--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
             <a href="CleanPC BORGES.bat" download>
                 <button id="download1">Download 1</button>
             </a>
-            <button id="download2">Download 2</button>
+            <a href="BORGESPC.bat" download>
+                <button id="download2">Download 2</button>
+            </a>
         </div>
 
         <div id="log"></div>
